# dropshare

./: .gitignore  Cargo.toml  Readme.md
client/: Cargo.toml
client/src/: main.rs
dropshare_client/: Cargo.toml
dropshare_client/src/: main.rs
dropshare_host/: Cargo.toml  index.html
dropshare_host/src/: main.rs
host/: Cargo.toml  index.html
host/src/: main.rs
