[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]

#Manual trust control
native-tls = "0.2"
tokio-native-tls = "0.3"
#everything else
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3" 
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
chrono = "0.4.43"
url = "2.5"