[package]
name = "dropshare_client"
version = "0.1.0"
edition = "2024"

[dependencies]

#Manual trust control
native-tls = "0.2"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3" 
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.43"
url = "2.5"
tungstenite = "0.29.0"
mimalloc = "0.1.48"
rustls = "0.23.38"
